Fix accessibility issue (not enough background/foreground contrast ratio in Toogle menu button)

--- a/_sass/minimal-mistakes/_navigation.scss
+++ b/_sass/minimal-mistakes/_navigation.scss
@@ -346,7 +346,7 @@
       position: relative;
       display: inline-block;
       padding: 0.5em 2.5em 0.5em 1em;
-      color: $gray;
+      color: $primary-color;
       font-size: $type-size-6;
       font-weight: bold;
       border: 1px solid $light-gray;
